--- a/package.json
+++ b/package.json
@@ -33,5 +33,7 @@
     "passport-local": "^1.0.0",
     "path": "^0.11.14",
     "socket.io": "^2.0.4"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
