--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jquery": "^2.1.4",
     "mongoose": "^4.4.6",
     "parrot-minidrone": "^1.1.1",
+    "particle-api-js": "^7.0.0-rc.1",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "path": "^0.11.14",
